# liberum-neto

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deletion-test.py  incremental-test.py  run-tests.sh  three-test.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.liberum-neto/test/: config.json  keypair
FILE_SHARE_SAVED_FILES/test_n1/: 5ckG8X2Ad8avzL57V5tvHbHpgxVtgAU5swwsxeMaNszx
cli/: Cargo.toml
cli/src/: main.rs
liberum-cli/: Cargo.toml
liberum-cli/src/: main.rs
liberum-core/: Cargo.toml
liberum-core/src/: configs.rs  lib.rs
liberum-vault/: Cargo.toml
liberum-vault/src/: lib.rs  main.rs  vault.rs
liberum-vault/src/fragment/: key.rs
liberum_cli/: Cargo.toml
liberum_cli/src/: main.rs
liberum_core/: Cargo.toml  build.rs
liberum_core/src/: codec.rs  configs.rs  core_connection.rs  lib.rs  liberum_test.rs  main.rs  messages.rs  node.rs  notes.md  proto.rs
liberum_core/src/connection/: message_handling.rs  mod.rs
liberum_core/src/lib/: json_codec.rs  lib.rs  module.rs  node_config.rs  parser.rs  proto.rs  types.rs
liberum_core/src/lib/proto/: file.rs  group.rs  mod.rs  pins.rs  queries.rs  signed.rs
liberum_core/src/liberum_vault/: mod.rs
liberum_core/src/liberum_vault/fragment/: key.rs
liberum_core/src/modules/: mod.rs  no_action_module.rs  pin_object.rs  plain_file_object.rs  signed_object.rs  simple_id_query_object.rs
liberum_core/src/node/: config.rs  manager.rs  mod.rs  store.rs  test.rs
liberum_core/src/proto/: parser.rs
liberum_core/src/proto/modules/: query.rs
liberum_core/src/swarm/: mod.rs
liberum_core/src/swarm_runner/: messages.rs  mod.rs
liberum_core/src/swarm_runner/behaviour/: file_share.rs  kademlia.rs  mod.rs  object_sender.rs  query_sender.rs
liberum_core/src/swarm_runner/parser/: mod.rs
liberum_core/src/test_runner/api/protos/: test_protocol.proto
liberum_core/src/vault/: mod.rs
liberum_core/src/vault/fragment/: key.rs
liberum_core/src/vaultv2/: mod.rs
liberum_core/src/vaultv3/: key.rs  mod.rs
liberum_gui/: Cargo.toml
liberum_gui/src/: daemon_com.rs  event_handler.rs  main.rs  system_observer.rs
liberum_gui/src/components/: status_bar.rs
liberum_gui/src/views/: mod.rs  node_view.rs  nodes_list_view.rs
liberum_gui/src/windows/: dialer_window.rs  mod.rs  node_config_window.rs  node_list_window.rs  node_window.rs
liberum_proto/: Cargo.toml
liberum_proto/src/: lib.rs
liberum_proto/src/proto/: mod.rs
liberum_proto/src/proto/modules/query/: mod.rs
liberum_vault/: Cargo.toml
liberum_vault/src/: fragment.rs  vault.rs
liberum_vault/src/fragment/: key.rs
tests/: delete.sh  dial_nonexisting.sh  download-deleted.sh  download-deleted.sh.not-supported  incremental.sh  keywords.robot  provide-download-ultra.sh  provide-download-ultra.sh.unstable  provide-download.sh  publish-download-rope-net.sh  publish-download-rr.sh  publish-download-ultra.sh  publish-download.sh  publish-providers-ultra.sh  publish-providers.sh  tri.sh
tests/e2e-tests/: __init__.robot  dial_nonexisting.robot  provide-download.robot  publish-download-rope-net.robot  publish-download.robot
tests/lib/: asserts.sh  colors.sh
vault/: Cargo.toml
vault/src/: main.rs  vault.rs
