[package]
name = "liberum-core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
tokio = {version = "1.40", features = ["full"] }
clap = { version = "4.5.6", features = ["derive"] }
libp2p = { version = "0.54", features = [ "tokio", "ping", "macros", "quic"] }
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
void = "1.0.2"
daemonize = "0.5.0"
