[package]
name = "liberum_core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
path="src/lib.rs"

[package.metadata.release]
release = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
tokio = {version = "1.40", features = ["full"] }
clap = { version = "4.5.6", features = ["derive"] }
libp2p = { version = "0.54", features = [ "tokio", "ping", "macros", "quic"] }
tracing = { version = "0.1"}
tracing-subscriber = { version = "0.3.18"}
void = "1.0.2"
daemonize = "0.5.0"
tokio-util = {version="0.7", features=["codec"]}
bytes = "1.8"
futures = "0.3"
homedir = "0.3"
serde_json = "1"
nix = "0.29"
anyhow = "1.0"
kameo = "0.12.2"
