[package]
name = "liberum_core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
path="src/lib/lib.rs"

[package.metadata.release]
release = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
bincode = "1"
tokio = {version = "1.40", features = ["full"] }
libp2p = { version = "0.54", features = [ "tokio", "ping", "macros", "quic", "kad", "request-response", "cbor"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
daemonize = "0.5.0"
tokio-util = {version="0.7", features=["codec", "io"]}
bytes = "1.8"
futures = "0.3"
homedir = "0.3"
serde_json = "1"
nix = "0.29"
anyhow = "1.0"
kameo = "0.13"
thiserror = "2"
tempdir = "0.3.7"
postcard = { version = "1.0.10", features = ["alloc"] }
blake3 = "1.5.4"
bs58 = "0.5.1"
strum = "0.26"
strum_macros = "0.26"
futures-util = "0.3.31"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio-rusqlite = "0.6.0"
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v4"] }
